2002-09-26  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-gradient.c: New file

	* src/libnr/nr-gradient.h: New file

	* src/sp-gradient.c (sp_lineargradient_painter_new): Construct libnr renderer
	(sp_lg_fill): Use it
	(sp_radialgradient_painter_new): Construct renderer
	(sp_rg_fill): Use it

	* src/sp-shape.c (sp_shape_print): Clear pixelstore

	* src/sp-chars.c (sp_chars_print_bpath): Clear pixelstore before each rendering

	* src/sp-gradient.c (sp_rg_fill): Oops, moved declaration before statements
	(sp_rg_fill): Ditto

2002-09-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-compose.c (nr_R8G8B8A8_N_EMPTY_R8G8B8A8_P): Oops, evil bug

	* src/libnr/nr-rect.c (nr_rect_d_matrix_d_transform): New method
	(nr_rect_f_matrix_f_transform): Ditto

	* src/sp-object-repr.c (sp_object_type_lookup): Added <pattern>

	* src/sp-pattern.h: New file

	* src/sp-pattern.c: New file

	* src/Makefile.am (sodipodi_SOURCES): Added sp-pattern.[c,h]

	* src/sp-gradient.c (sp_rg_fill): Implement, seems correct although SLOW
	(sp_radialgradient_painter_new): Implement, except viewport percentages
	(sp_radialgradient_read_attr): Initialize right numbers
	(sp_radialgradient_init): Ditto

2002-09-24  Masatake YAMATO  <jet@gyve.org>

	* src/select-context.c (sp_select_context_root_handler,
	sp_select_context_item_handler): used GDK_space instead
	of GDK_BUTTON_2. Added Lauris's event mask code after 
	grabbing an item.

	* src/seltrans.c (sp_sel_trans_handle_stamp): removed.
	(sp_seltrans_handle_event): handled "pressing space" as 
	stamping.
	(gdk/gdkkeysyms.h): included.

	* src/knot.c (sp_knot_class_init): removed "stamped" signal 
	again.
	(sp_knot_handler): didn't emit stamped anymore.

2002-09-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-matrix.c (nr_matrix_d_set_scale): new method
	(nr_matrix_f_set_scale): Ditto

	* src/sp-use.c (sp_use_href_changed): Use unref instead of destroy
	(sp_use_destroy): Ditto
