@@ -10,6 +10,7 @@ TODO for 0.27
 - Tooltips for tools
 - Update .spec.in file
 - Ungroup forgetting font family bug
+- Ungroup forgetting paintserver in group bug
 - Fix places where bbox is not tested for emptyness
 - Fix misplaced draws if viewBox present
 
